feat(M2): 鉴权收紧 + 用户档案 / 鉴权 / 老人服务实现 + VO 字段
- SecurityConfig  anyRequest().permitAll() → 按 docs/api 全局约定收紧为
                  角色规则（ELDER 默认只读，写接口 403 兜底）
- ElderService / Impl  老人档案读写 + 鉴权资源归属校验
- AuthServiceImpl       登录态 / token 刷新 / 密码 BCrypt 校验
- UserServiceImpl       用户档案查询与脱敏（手机 / 身份证 / 姓名走 MaskUtil）
- OrderVO / UserInfoVO  字段补齐 + 脱敏字段标注

按 AGENT.md §2.8 / §4.3：ELDER 写接口服务端拦截 + 资源归属双校验